MDL-55074 theme_boost: Fix weird text wrapping in block titles

--- a/theme/boost/scss/moodle/blocks.scss
+++ b/theme/boost/scss/moodle/blocks.scss
@@ -13,10 +13,6 @@
     margin-left: 0;
 }
 
-.block .card-title {
-    word-break: break-all;
-}
-
 .block .block-controls {
     .dropdown-toggle {
         /* So that the caret takes the colour of the icon. */
